# godot_openxr

./: .gitmodules  README.md  SConstruct  build.gradle
demo/: ControllerInfo.tscn  Main.gd  Main.tscn  Table.tscn  openxr_main.gd  project.godot
demo/addons/godot-openxr/: godot_openxr.gdnlib  godot_openxr.gdns
demo/addons/godot-openxr/meshes/: hands_albedo.png.import  hands_normal.png.import  models_hands_vr_glove_vmat.material  vr_glove_left_model_slim.glb.import  vr_glove_right_model_slim.glb.import
demo/addons/godot-openxr/scenes/: first_person_controller_vr.tscn  openxr_controller.gd  openxr_controller.tscn  openxr_hand_tracking.gd  openxr_left_hand.tscn  openxr_right_hand.tscn
src/: ARVRInterface.cpp  AndroidManifest.xml  CMakeLists.txt  GodotCalls.cpp  GodotCalls.h  OXRCalls.c  OXRCalls.h  OpenXRApi.cpp  OpenXRApi.h  build.gradle  gdopenxrmobile.gdap  godot_openxr.h
src/openxr/: OpenXRApi.cpp  OpenXRApi.h  OpenXRConfig.cpp  OpenXRConfig.h  OpenXRHand.cpp  OpenXRHand.h  OpenXRPose.cpp  OpenXRPose.h
src/openxr/actions/: action.cpp  action.h  actionset.cpp  actionset.h  interactionprofile.cpp  interactionprofile.h  path.cpp  path.h
